@@ -812,7 +812,8 @@ BEGIN
     LTEXT           "Video format:",IDC_STATIC_VIDFMT,18,49,52,8
     LTEXT           "",IDC_STATIC_VIDEOFORMAT,75,49,177,8
     LTEXT           "Duration:",IDC_STATIC_SDURATION,18,60,52,8
-    LTEXT           "",IDC_STATIC_DURATION,75,60,177,8
+    LTEXT           "",IDC_STATIC_DURATION,75,60,75,8
+    CONTROL         "Continuously play media file",IDC_CHECK_REPEAT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,154,59,120,10
     GROUPBOX        "Playback Settings",IDC_STATIC,7,77,273,57
     LTEXT           "Audio preprocessor",IDC_STATIC,18,90,82,8
     COMBOBOX        IDC_COMBO_AUDIOPREPROCESSOR,103,88,125,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
