@@ -499,6 +499,7 @@
     <item id="1590">Default</item>
     <item id="1591">Mute left</item>
     <item id="1592">Mute right</item>
+    <item id="1593">Continuously play media file</item>
     <item id="32791">What is my &amp;IP-address?</item>
     <item id="32798">&amp;Op\tCtrl+O</item>
     <item id="32801">Vie&amp;w Channel Messages\tF10</item>
